# fruit-game

./: README.md
fruit-ninja-game/: main.py  pyproject.toml
