[project]
name = "fruit-ninja-game"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abitha B", email = "abithabalakrishnan2005@gmail.com"},
    {name = "", email = ""},
]
dependencies = ["pygame>=2.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
